# aopmem-cli

./: Cargo.toml  DEPS_JUSTIFICATION.md  readme.md
.devplan/: AOPMEM_V020_COMPLETE_REPORT.md  BLOCKERS.md  CURRENT_STAGE.md  EXECUTION_LEDGER.json  EXECUTION_LEDGER.md  FINAL_DECISION_LOG.md  GA001_REAUDIT_REPORT.md  GITHUB_RELEASE_NOTES_v0.2.0-rc6.md  GITHUB_RELEASE_NOTES_v0.2.0-rc7.md  GITHUB_RELEASE_NOTES_v0.2.0-rc8.md  GITHUB_RELEASE_NOTES_v0.2.0-rc9.md  GLOBAL_AUDIT_REPORT.md  MASTER_SPEC.md  PATCH_GLOBAL_AUDIT_P2.md  PROOF_LOG.md  RC5_AGENT_COMPLIANCE_REPORT.md  RC5_CURRENT_STAGE.md  RC5_EXECUTION_LEDGER.json  RC5_FIELD_FINDINGS.md  RC5_FINAL_DECISION_LOG.md  RC5_GLOBAL_AUDIT_REPORT.md  RC5_MACOS_PROOF_REPORT.md  RC5_MANAGED_BLOCK_V2_SPEC.md  RC5_PERFORMANCE_REPORT.md  RC5_PROOF_LOG.md  RC5_REGRESSION_REPORT.md  RC5_REQUIREMENTS_MATRIX.md  RC5_TOOL_DEDUPE_REPORT.md  RC5_WINDOWS_PUBLISH_REPORT.md  RC5_WINDOWS_PUBLISH_ROOT_CAUSE.md  RC6_ASSET_REPORT.md  RC6_CURRENT_STAGE.md  RC6_EXECUTION_LEDGER.json  RC6_GLOBAL_AUDIT_REPORT.md  RC6_MACOS_PROOF_REPORT.md  RC6_PROOF_LOG.md  RC6_WINDOWS_ACCEPTANCE_FAILURE.md  RC6_WINDOWS_ACCEPTANCE_PROMPT.md  RC6_WINDOWS_PUBLISH_REMEDIATION.md  RC6_WINDOWS_PUBLISH_ROOT_CAUSE.md  (+57 more)
aopmem_v0_1_final_orchestrated_pack/: README.md  RUN_FIRST.md
docs/: AUDIT_REPAIR.md  BACKUP_INVENTORY_POLICY.md  DEBUG_CAPSULE.md  DESKTOP_UI.md  LOCAL_OBSERVABILITY.md  MEMORY_KEEPER_V2.md  PLATFORM_CHECK.md  RECOVERY_STATE_MACHINE.md  SECRET_HANDLING.md  TASK_START_PROTOCOL.md  TOOL_ALIASES_AND_DEDUPLICATION.md  UPGRADE_FROM_V010_RC3.md  UPGRADE_TO_RC5.md  (+10 more)
(+271 files in other folders)
