[package]
name = "aopmem"
version = "0.2.0-rc9"
edition = "2021"
rust-version = "1.89"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
getrandom = "0.4"
gix = { version = "0.85", default-features = false, features = ["sha1", "tree-editor", "zlib-rs"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tiny_http = { version = "0.12.0", default-features = false }
uuid = { version = "1.18", features = ["v4"] }
zip = { version = "4.6.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
